--- a/demoasp/demoasp.csproj
+++ b/demoasp/demoasp.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Content Include="addition.aspx" />
     <Content Include="calculator.aspx" />
+    <Content Include="Home.aspx" />
     <Content Include="Web.config" />
     <Content Include="WebForm1.aspx" />
   </ItemGroup>
@@ -87,6 +88,20 @@
     <Compile Include="calculator.aspx.designer.cs">
       <DependentUpon>calculator.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Home.aspx.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Home.aspx.designer.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Masterpage1.Master.cs">
+      <DependentUpon>Masterpage1.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Masterpage1.Master.designer.cs">
+      <DependentUpon>Masterpage1.Master</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebForm1.aspx.cs">
       <DependentUpon>WebForm1.aspx</DependentUpon>
@@ -97,6 +112,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Masterpage1.Master" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
