--- a/demoasp/demoasp.csproj
+++ b/demoasp/demoasp.csproj
@@ -70,6 +70,7 @@
     <Content Include="addition.aspx" />
     <Content Include="calculator.aspx" />
     <Content Include="Home.aspx" />
+    <Content Include="MultiView.aspx" />
     <Content Include="Web.config" />
     <Content Include="WebForm1.aspx" />
   </ItemGroup>
@@ -101,6 +102,13 @@
     </Compile>
     <Compile Include="Masterpage1.Master.designer.cs">
       <DependentUpon>Masterpage1.Master</DependentUpon>
+    </Compile>
+    <Compile Include="MultiView.aspx.cs">
+      <DependentUpon>MultiView.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MultiView.aspx.designer.cs">
+      <DependentUpon>MultiView.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebForm1.aspx.cs">
